# metaprogramming

./: .gitignore  .gitmodules  .travis.yml  README.md
HW1/: .travis.yml  CMakeLists.txt  README.md
HW1/src/: CFactoryUnit.hpp  Erase.hpp  EraseUtil.hpp  IArmyFactory.cpp  IArmyFactory.hpp  Length.hpp  TypeList.hpp  test.cpp
HW1and2/: CMakeLists.txt
HW1and2/src/: IArmyFactory.hpp  test.cpp
Singleton/: CMakeLists.txt  LongevityManager.cpp  LongevityManager.h  SingletonHandler.hpp  SingletonInfoInterface.cpp  SingletonInfoInterface.h  main.cpp
